tried moving to a new not-mixin-system for crafting recipes;